infra.tf
provider "aws" {
  region = "ap-south-1"
  profile = "riya"
}

resource "aws_vpc" "main" {
  cidr_block = "192.168.0.0/16"
  instance_tenancy = "default"
  enable_dns_hostnames = true
  tags = {
    Name = "myvpc"
  }
}

resource "aws_subnet" "main1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "192.168.0.0/24"
  availability_zone = "ap-south-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "my_subnet_1a"
  }
}

resource "aws_subnet" "main2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "192.168.1.0/24"
  availability_zone = "ap-south-1b"
  tags = {
    Name = "my_subnet_1b"
  }
}


resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "my_igw"
  }
}

resource "aws_route_table" "r" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "my_routing_table"
  }
}


resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.main1.id
  route_table_id = aws_route_table.r.id
}

resource "aws_security_group" "sg1" {
  name        = "wp-sg"
  description = "Allow ssh and http "
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "allow ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "allow http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "wp-sg"
  }
}



resource "aws_security_group" "sg3" {
  name        = "mysql-sg"
  description = "Allow security groups"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "allow wp-sg"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    security_groups = [aws_security_group.sg1.id]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "mysql-sg"
  }
}


resource "aws_instance" "web" {
 ami = "ami-08706cb5f68222d09"
 instance_type = "t2.micro"
 key_name = "mykey-new"
 security_groups = [aws_security_group.sg3.id]
 subnet_id = aws_subnet.main2.id
 tags = {
 Name = "MySQL"
 }
}
resource "aws_instance" "web1" {
 ami = "ami-7e257211"
 instance_type = "t2.micro"
 key_name = "mykey-new"
 security_groups = [aws_security_group.sg1.id]
 subnet_id = aws_subnet.main1.id
 tags = {
 Name = "wordpress"
 }
}
